--- a/Codigo/P2_OLC1_DIC23/nbproject/project.properties
+++ b/Codigo/P2_OLC1_DIC23/nbproject/project.properties
@@ -93,7 +93,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=P2_OLC1_DIC23
-main.class=p1_olc1.P1_OLC1
+main.class=P2_OLC1.Proyecto2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
