ya funcionan las  operaciones aritmeticas

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Codigo/P2_OLC1_DIC23/nbproject/private/
 /Codigo/P2_OLC1_DIC23/build/
+/Codigo/P2OLC1DIC23/nbproject/private/
+/Codigo/P2OLC1DIC23/build/
